# Theatricus

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  notes.txt
Core/: CMakeLists.txt  Core.cpp  Core.h  Node.h  Slate.h
Core/Dependencies/: CMakeLists.txt
Modules/: CMakeLists.txt
Studio/: CMakeLists.txt  main.cpp
